--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,2 +1,2 @@
-<button>Start</button>
-<button >Stop</button>
+<button  (click)="startTheGame()" >Start</button>
+<button  (click)="stopTheGame()" >Stop</button>
