--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-game-control (eventInterval)="onIntervalfired($event)"></app-game-control>
+<app-game-control (eventInterval)="buttonclicked($event)"></app-game-control>
 
 <!-- <div *ngIf=""> -->
 <app-odd  *ngFor="let odd of oddList"></app-odd>
